@@ -1,3 +1,9 @@
+Mon Feb 24 18:10:02 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* test/fiddle/test_function.rb: remove unused variables.
+	* test/fileutils/test_fileutils.rb: ditto.
+	* test/io/console/test_io_console.rb: ditto.
+
 Mon Feb 24 12:37:51 2014  Eric Wong  <e@80x24.org>
 
 	* configure.in: use -Wno-packed-bitfield-compat for GCC 4.4+
